# swagger/IGram-swagger-v1.9.yaml
@@ -135,14 +135,12 @@ paths:
         '200':
           description: Avatar photo
           content:
-            image/png: 
+            application/json:
               schema:
-                type: string
-                format: binary
-            image/jpeg:
-              schema:
-                type: string
-                format: binary
+                type: object
+                properties:
+                  photoPath:
+                    type: string
         '400':
           description: Bad request (incorrectly filled in fields)
         '404':
@@ -423,6 +421,13 @@ paths:
         '200':
           description: Get image for post
           content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  imagePath:
+                    type:
+                      string
             image/png: 
               schema:
                 type: string
